--- a/AllocMemory/AllocMemory.vcxproj
+++ b/AllocMemory/AllocMemory.vcxproj
@@ -147,17 +147,34 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="address.h" />
+    <ClInclude Include="allocer.h" />
+    <ClInclude Include="fifo.h" />
+    <ClInclude Include="lfu.h" />
+    <ClInclude Include="lru.h" />
+    <ClInclude Include="optimal.h" />
+    <ClInclude Include="preload.h" />
+    <ClInclude Include="printinfo.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="address.cpp" />
+    <ClCompile Include="allocer.cpp" />
     <ClCompile Include="AllocMemory.cpp" />
+    <ClCompile Include="fifo.cpp" />
+    <ClCompile Include="optimal.cpp" />
+    <ClCompile Include="preload.cpp" />
+    <ClCompile Include="printinfo.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="data.in" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
